--- a/setting.ini
+++ b/setting.ini
@@ -1,15 +1,15 @@
 room = 119
 building = 丁香C栋
-adminUrl = https://xizhi.qqoq.net/xxxxxx.send
-userUrl = https://xizhi.qqoq.net/xxxxxx.channel
+adminUrl = https://xizhi.qqoq.net/XZcc26e49e2e642d3f4c8b11dcc7130b2f.send
+userUrl = https://xizhi.qqoq.net/XZ4c828c643c514323552ba997188ffa3.channel
 electricityLowMoney = 20
 waterLowMoney = 10
 waitTime = 6
-checkUrlEnable = true
+checkUrlEnable = false
 feeUpEnable = true
 weekEnable = true
 weekDay = 7
-sessionId = 7BF0BB4CB2852??????233D03C9F6EBE
+sessionId = A196A54D199969DC2C0B3E8FC9813D0E
 # 配置详情请见 README.md
 # room = 119    例如: 119
 # building = 丁香C栋   例如: 丁香C栋
