--- a/setting.ini
+++ b/setting.ini
@@ -1,25 +1,25 @@
 room = 119
 building = 丁香C栋
-adminUrl = https://xizhi.qqoq.net/XZcc26e49e2e642d3f4c8b11dcc7130b2f.send
-userUrl = https://xizhi.qqoq.net/XZ4c828c643c514323552ba997188ffa3.channel
+adminUrl = https://xizhi.qqoq.net/xxxxxx.send
+userUrl = https://xizhi.qqoq.net/xxxxxx.channel
 electricityLowMoney = 20
 waterLowMoney = 10
 waitTime = 6
-checkUrlEnable = false
+checkUrlEnable = true
 feeUpEnable = true
 weekEnable = true
 weekDay = 7
-sessionId = A196A54D199969DC2C0B3E8FC9813D0E
-# 配置详情请见 README.md
+verificationCount = 5
+# 配置详情请见 README.md [https://gitee.com/ideloveyou/SGU-Water-and-Electricity-Bill-enquiry/blob/main/README.md]
 # room = 119    例如: 119
 # building = 丁香C栋   例如: 丁香C栋
 # adminUrl = https://xizhi.qqoq.net/xxxxxx.send    管理员推送服务url，息知-单点推送
-# userUrl = https://xizhi.qqoq.net/xxxxxx.channel    用户推送服务url，息知-频道推送
+# userUrl = https://xizhi.qqoq.net/xxxxxx.channel    用户推送服务url，息知-频道推送，将二维码发给舍友，让舍友也能收到通知
 # electricityLowMoney = 20    电费低于此额度提醒(元)，推荐值20
 # waterLowMoney = 10    水费低于此额度提醒(元)，推荐值10
 # waitTime = 6    欠费信息推送后与下次推送的间隔时间(小时)，推荐值6
-# checkUrlEnable = true    是否检测息知能否收到提示（填true或者false，第一次使用建议开启，后续建议不开启）
+# checkUrlEnable = true    是否检测息知能否收到信息（填true或者false，第一次使用建议开启，后续建议不开启）
 # feeUpEnable = true    是否开启充值提醒功能(填true或者false)
 # weekEnable = true    是否开启周报功能(填true或者false)
 # weekDay = 7    周报功能推送日期（1表示周一，2表示周二）
-# sessionId = 7BF0BB4CB2852??????233D03C9F6EBE    sessionId请自己爬取(sessionId可以查到自己的隐私信息，切勿流出),爬取教程请见 README.md
+# verificationCount = 5    当账号掉线，脚本会重新向管理员发送登录二维码请求登录，单个二维码有效期5分钟，过期即重新发送新二维码，为防止骚扰，添加了发送次数限制
