--- a/pom.xml
+++ b/pom.xml
@@ -6,24 +6,19 @@
 
     <groupId>cn.rabig</groupId>
     <artifactId>SGU-Water-and-Electricity-Bill-enquiry</artifactId>
-    <version>4.5.1</version>
+    <version>4.5.2</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <hutool-version>5.8.8</hutool-version>
+        <hutool-version>5.8.16</hutool-version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-core</artifactId>
-            <version>${hutool-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>cn.hutool</groupId>
-            <artifactId>hutool-json</artifactId>
             <version>${hutool-version}</version>
         </dependency>
         <dependency>
@@ -47,9 +42,9 @@
             <version>0.9.4</version>
         </dependency>
         <dependency>
-            <groupId>com.microsoft.playwright</groupId>
-            <artifactId>playwright</artifactId>
-            <version>1.36.0</version>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2</artifactId>
+            <version>2.0.38</version>
         </dependency>
     </dependencies>
 
